--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <main>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">9AM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea"></textarea>
+            <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">10AM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          </div>
+        </div>
+
+      </main>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
