--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <span class="input-group-text hour">9AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea"></textarea>
-            <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -46,7 +46,7 @@
               <span class="input-group-text hour">10AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
-            <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
 
