--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <span class="input-group-text hour">9AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -46,7 +46,7 @@
               <span class="input-group-text hour">10AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
           </div>
         </div>
 
@@ -55,5 +55,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
