--- a/index.html
+++ b/index.html
@@ -49,7 +49,69 @@
             <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
           </div>
         </div>
-
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">11AM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">12AM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">1PM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">2PM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">3PM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">4PM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text hour">5PM </span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea" id="10am"></textarea>
+            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+        </div>
       </main>
     </div>
 
