--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
+    <script src="https://kit.fontawesome.com/04e3f48139.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
@@ -37,7 +32,7 @@
               <span class="input-group-text hour">9AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="9"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -46,7 +41,7 @@
               <span class="input-group-text hour">10AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="10"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -55,7 +50,7 @@
               <span class="input-group-text hour">11AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="11"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -64,7 +59,7 @@
               <span class="input-group-text hour">12AM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="12"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -73,7 +68,7 @@
               <span class="input-group-text hour">1PM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="13"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -82,7 +77,7 @@
               <span class="input-group-text hour">2PM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="14"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -91,7 +86,7 @@
               <span class="input-group-text hour">3PM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="15"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -100,7 +95,7 @@
               <span class="input-group-text hour">4PM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="16"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
         <div class="row">
@@ -109,7 +104,7 @@
               <span class="input-group-text hour">5PM </span>
             </div>
             <textarea class="form-control" aria-label="With textarea" id="17"></textarea>
-            <button type="button" class="saveBtn"><i class="fa-light fa-floppy-disk"></i></button>
+            <button type="button" class="saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
           </div>
         </div>
       </main>
